--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<option value="p">% Currently Married</option>
 						<option value="q">% Unemployed</option>
 						<option value="r">% Developable Land</option>
-						<option value="s">Geographic Mobility</option>
+						<!-- <option value="s">Geographic Mobility</option> -->
 					</select>
 				</div>
 				<div class="form-group">
@@ -53,15 +53,15 @@
 						<option value="1">Regions</option>
 						<option value="2">Census Divisions</option>
 						<option value="3">States</option>
-						<option value="4">CBSAs</option>
-						<option value="5">Commuting Zones</option>
+						<!-- <option value="4">CBSAs</option>
+						<option value="5">Commuting Zones</option> -->
 						<option value="6">Counties</option>
-						<option value="7">Incorporated Places</option>
+						<!--<option value="7">Incorporated Places</option>
 						<option value="8">Unincorporated Places</option>
 						<option value="9">Federal American Indian Areas</option>
 						<option value="10">School Districts</option>
 						<option value="11">Zip Code Areas</option>
-						<option value="12">Census Tracts</option>
+						<option value="12">Census Tracts</option> -->
 					</select>
 				</div>
 				<!-- Button to change style to user input  -->
