--- a/index.html
+++ b/index.html
@@ -195,10 +195,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'a3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjz9x7e2900ra1cnvgfduap15')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> National Center for Health Statistics. U.S. Small-Area Life Expectancy Estimates Project (USALEEP): Life Expectancy Estimates File for USA, 2010-2015<br><strong>Year:</strong> 2010 - 2015<br><a href="https://www.cdc.gov/nchs/nvss/usaleep/usaleep.html#life-expectancy" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Life Expectancy (Years)';
+			document.getElementById('label-vlow').innerHTML = '74.8 - 76.6';
+			document.getElementById('label-low').innerHTML = '76.6 - 78.0';
+			document.getElementById('label-mod').innerHTML = '78.0 - 78.9';
+			document.getElementById('label-high').innerHTML = '78.9 - 79.6';
+			document.getElementById('label-vhigh').innerHTML = '79.6 - 81.0';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#d7191c;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fdae61;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#ffffbf;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#abdda4;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#2b83ba;"></span>'; 
 		} else if (styleId === 'a4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -353,7 +364,7 @@
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'c6') {
 			map.setStyle('mapbox://styles/owja/cjz9kx3oe07e71cqr8kpxfdpm')
-			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2016<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong>2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
 			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
 			document.getElementById('legend').style.visibility = 'visible';   
 			document.getElementById('legend-title').innerHTML = 'Health Insurance Coverage (%)';
