--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			document.getElementById('label-low').innerHTML = '76.6 - 78.0';
 			document.getElementById('label-mod').innerHTML = '78.0 - 78.9';
 			document.getElementById('label-high').innerHTML = '78.9 - 79.6';
-			document.getElementById('label-vhigh').innerHTML = '79.6 - 81.0';
+			document.getElementById('label-vhigh').innerHTML = '79.6 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#d7191c;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fdae61;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#ffffbf;"></span>';
@@ -230,7 +230,7 @@
 			document.getElementById('label-low').innerHTML = '75.4 - 77.0';
 			document.getElementById('label-mod').innerHTML = '77.0 - 78.3';
 			document.getElementById('label-high').innerHTML = '78.3 - 79.9';
-			document.getElementById('label-vhigh').innerHTML = '89.9 - 89.5';
+			document.getElementById('label-vhigh').innerHTML = '89.9 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#d7191c;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fdae61;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#ffffbf;"></span>';
@@ -301,7 +301,7 @@
 			document.getElementById('label-low').innerHTML = '29 - 32';
 			document.getElementById('label-mod').innerHTML = '32 - 34';
 			document.getElementById('label-high').innerHTML = '34 - 37';
-			document.getElementById('label-vhigh').innerHTML = '37 - 47';
+			document.getElementById('label-vhigh').innerHTML = '37 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
@@ -372,7 +372,7 @@
 			document.getElementById('label-low').innerHTML = '85 - 88';
 			document.getElementById('label-mod').innerHTML = '88 - 91';
 			document.getElementById('label-high').innerHTML = '91 - 93';
-			document.getElementById('label-vhigh').innerHTML = '93 - 98';
+			document.getElementById('label-vhigh').innerHTML = '93 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#d7191c;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fdae61;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#ffffbf;"></span>';
@@ -443,7 +443,7 @@
 			document.getElementById('label-low').innerHTML = '10.6 - 13.7';
 			document.getElementById('label-mod').innerHTML = '13.7 - 16.7';
 			document.getElementById('label-high').innerHTML = '16.7 - 20.8';
-			document.getElementById('label-vhigh').innerHTML = '20.8 - 52';
+			document.getElementById('label-vhigh').innerHTML = '20.8 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
@@ -514,7 +514,7 @@
 			document.getElementById('label-low').innerHTML = '39,463 - 45,362';
 			document.getElementById('label-mod').innerHTML = '45,362 - 50,785';
 			document.getElementById('label-high').innerHTML = '50,785 - 57,896';
-			document.getElementById('label-vhigh').innerHTML = '57,896 - 129,588';
+			document.getElementById('label-vhigh').innerHTML = '57,896 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#ffffcc;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#a1dab4;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#41b6c4;"></span>';
@@ -585,7 +585,7 @@
 			document.getElementById('label-low').innerHTML = '0.5 - 1.3';
 			document.getElementById('label-mod').innerHTML = '1.3 - 3.9';
 			document.getElementById('label-high').innerHTML = '3.9 - 14.4';
-			document.getElementById('label-vhigh').innerHTML = '14.4 - 86.9';
+			document.getElementById('label-vhigh').innerHTML = '14.4 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
@@ -656,7 +656,7 @@
 			document.getElementById('label-low').innerHTML = '60.7 - 77.6';
 			document.getElementById('label-mod').innerHTML = '77.6 - 88.4';
 			document.getElementById('label-high').innerHTML = '88.4 - 93.9';
-			document.getElementById('label-vhigh').innerHTML = '93.9 - 99.8';
+			document.getElementById('label-vhigh').innerHTML = '93.9 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
@@ -727,7 +727,7 @@
 			document.getElementById('label-low').innerHTML = '1.8 - 3.0';
 			document.getElementById('label-mod').innerHTML = '3.0 - 5.3';
 			document.getElementById('label-high').innerHTML = '5.3 - 11.8';
-			document.getElementById('label-vhigh').innerHTML = '11.8 - 99.2';
+			document.getElementById('label-vhigh').innerHTML = '11.8 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
@@ -798,7 +798,7 @@
 			document.getElementById('label-low').innerHTML = '86,020 - 107,040';
 			document.getElementById('label-mod').innerHTML = '107,040 - 133,760';
 			document.getElementById('label-high').innerHTML = '133,760 - 174,760';
-			document.getElementById('label-vhigh').innerHTML = '174,760 - 995,900';
+			document.getElementById('label-vhigh').innerHTML = '174,760 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#ffffcc;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#a1dab4;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#41b6c4;"></span>';
@@ -869,7 +869,7 @@
 			document.getElementById('label-low').innerHTML = '589 - 651';
 			document.getElementById('label-mod').innerHTML = '651 - 721';
 			document.getElementById('label-high').innerHTML = '721 - 848';
-			document.getElementById('label-vhigh').innerHTML = '848 - 1,973';
+			document.getElementById('label-vhigh').innerHTML = '848 +';
 			document.getElementById('col-vlow').innerHTML = '<span style="background:#ffffcc;"></span>';
 			document.getElementById('col-low').innerHTML = '<span style="background:#a1dab4;"></span>';
 			document.getElementById('col-mod').innerHTML = '<span style="background:#41b6c4;"></span>';
@@ -931,10 +931,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'k6') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb0p5pw01nt1cs9y6y26tzo')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong><br><strong>Year:</strong>2018<br><a href="https://www.huduser.gov/portal/datasets/assthsg.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Subsidized Housing Units';
+			document.getElementById('label-vlow').innerHTML = '1 - 76';
+			document.getElementById('label-low').innerHTML = '76 - 208';
+			document.getElementById('label-mod').innerHTML = '208 - 458';
+			document.getElementById('label-high').innerHTML = '458 - 1,214';
+			document.getElementById('label-vhigh').innerHTML = '1,214 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'k7') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -991,10 +1002,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'l6') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb0ublc02yt1ds0o5rikykh')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong><br><strong>Year:</strong>2016<br><a href="https://data-downloads.evictionlab.org/" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Eviction Rate (%)';
+			document.getElementById('label-vlow').innerHTML = '0.0 - 0.1';
+			document.getElementById('label-low').innerHTML = '0.1 - 0.7';
+			document.getElementById('label-mod').innerHTML = '0.7 - 1.4';
+			document.getElementById('label-high').innerHTML = '1.4 - 2.6';
+			document.getElementById('label-vhigh').innerHTML = '2.6 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'l7') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1051,10 +1073,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'm6') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb0ug84005h1cmmmhoser9b')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong><br><strong>Year:</strong>2016<br><a href="https://data-downloads.evictionlab.org/" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Eviction Filing Rate (%)';
+			document.getElementById('label-vlow').innerHTML = '0.0 - 0.2';
+			document.getElementById('label-low').innerHTML = '0.2 - 1.0';
+			document.getElementById('label-mod').innerHTML = '1.0 - 2.2';
+			document.getElementById('label-high').innerHTML = '2.2 - 4.6';
+			document.getElementById('label-vhigh').innerHTML = ' 4.6 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'm7') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
