--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'a3') {
-			map.setStyle('mapbox://styles/owja/cjz9x7e2900ra1cnvgfduap15')
+			map.setStyle('mapbox://styles/owja/cjzb5w29m04m81cmmpfjw5svq')
 			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> National Center for Health Statistics. U.S. Small-Area Life Expectancy Estimates Project (USALEEP): Life Expectancy Estimates File for USA, 2010-2015<br><strong>Year:</strong> 2010 - 2015<br><a href="https://www.cdc.gov/nchs/nvss/usaleep/usaleep.html#life-expectancy" target="_blank">Go to source</a></p>';
 			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
 			document.getElementById('legend').style.visibility = 'visible';   
@@ -278,10 +278,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'b3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjzb5mpad0xmy1cs4zfphi552')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> County Health Rankings<br><strong>Year:</strong> 2016<br><a href="https://www.countyhealthrankings.org/explore-health-rankings/measures-data-sources/county-health-rankings-model/health-factors/health-behaviors/insufficient-sleep" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Insufficient Sleep (%)';
+			document.getElementById('label-vlow').innerHTML = '26.1 - 30.7';
+			document.getElementById('label-low').innerHTML = '30.7 - 33.0';
+			document.getElementById('label-mod').innerHTML = '33.0 - 35.2';
+			document.getElementById('label-high').innerHTML = '35.2 - 36.8';
+			document.getElementById('label-vhigh').innerHTML = '36.8 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#feebe2;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fbb4b9;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#f768a1;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#c51b8a;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#7a0177;"></span>';
 		} else if (styleId === 'b4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -349,10 +360,21 @@
 			document.getElementById('level-info').innerHTML = '<p></p>';
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'c3') {
-			map.setStyle('mapbox://styles/mapbox/light-v10')
-			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
-			document.getElementById('level-info').innerHTML = '<p></p>';
-			document.getElementById("legend").style.visibility = "hidden";
+			map.setStyle('mapbox://styles/owja/cjz9kx3oe07e71cqr8kpxfdpm')
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> American Community Survey<br><strong>Year:</strong> 2013 - 2017<br><a href="https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-data.html" target="_blank">Go to source</a></p>';
+			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
+			document.getElementById('legend').style.visibility = 'visible';   
+			document.getElementById('legend-title').innerHTML = 'Health Insurance Coverage (%)';
+			document.getElementById('label-vlow').innerHTML = '52 - 85';
+			document.getElementById('label-low').innerHTML = '85 - 88';
+			document.getElementById('label-mod').innerHTML = '88 - 91';
+			document.getElementById('label-high').innerHTML = '91 - 93';
+			document.getElementById('label-vhigh').innerHTML = '93 +';
+			document.getElementById('col-vlow').innerHTML = '<span style="background:#d7191c;"></span>';
+			document.getElementById('col-low').innerHTML = '<span style="background:#fdae61;"></span>';
+			document.getElementById('col-mod').innerHTML = '<span style="background:#ffffbf;"></span>';
+			document.getElementById('col-high').innerHTML = '<span style="background:#abdda4;"></span>';
+			document.getElementById('col-vhigh').innerHTML = '<span style="background:#2b83ba;"></span>';  
 		} else if (styleId === 'c4') {
 			map.setStyle('mapbox://styles/mapbox/light-v10')
 			document.getElementById('outcome-info').innerHTML = '<p>Sorry, no data available for that combination of outcome and level :(</p>';
@@ -1419,7 +1441,7 @@
 			document.getElementById("legend").style.visibility = "hidden";
 		} else if (styleId === 'r6') {
 			map.setStyle('mapbox://styles/owja/cjzb3eel30vnr1cs4eiz0tfwt')
-			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> From previous assignment (% of land suitable for development)<br><strong>Year:</strong> 2019</p>';
+			document.getElementById('outcome-info').innerHTML = '<p><strong>Source:</strong> Fraction of land suitable for development<br><strong>Year:</strong> 2019</p>';
 			document.getElementById('level-info').innerHTML = '<p><em><span style="color:grey;">Query the map by clicking on a feature</span></em></p>';
 			document.getElementById('legend').style.visibility = 'visible';   
 			document.getElementById('legend-title').innerHTML = 'Developable Land (%)';
